# projectiveTextureMappingExample

./: CMakeLists.txt  README.txt  lena.rgb  projtex.c
